# evm-approvals

./: Cargo.toml  LICENSE  README.md
rotki/: Cargo.toml
rotki/src/: config.rs  lib.rs
src/: main.rs
