[package]
name = "approvals"
version = "0.1.0"
edition = "2021"

[dependencies]
# sqlite
rusqlite = { version = "0.29.0", features = ["sqlcipher"] }
alloy-primitives = "0.7.7"
alloy-provider = "0.2.1"
alloy-sol-types = {version = "0.7.7", features = ["json"]}
alloy-contract = "0.2.1"

# tokio
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

clap = { version = "4.5.15", features = ["derive"] }
rpassword = "7.3.1"

[dependencies.rotki]
path = "rotki"
